resources/2020.06/manifests/normal/virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: wp-test
spec:
  virtualHost:
    domains:
    - wp-test.cl.monach.us
    routes:
    - matchers:
      - regex: /wp-admin
      redirectAction: 
        prefixRewrite: /wordpress/wp-admin
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: channel-wp-test-80
            namespace: gloo-system
